...

  final List<Vault> _vaults = [
    Vault(
      vaultId: 1,
      ownerId: _mockUserId,
      vaultType: VaultTypes.private,
      name: 'My Vault',
      createdAt: DateTime.parse('2026-07-01T08:00:00Z'),
    ),
    Vault(
      vaultId: 2,
      ownerId: _mockUserId,
      vaultType: VaultTypes.shared,
...
