...
            const SizedBox(height: 32),

            //Display name input field
            AppTextField.standard(
              key: _nameKey,
              hint: 'e.g. Karen Smith',
              label: 'Display Name',
              controller: _nameController,
              keyboardType: TextInputType.name,
              prefixIcon: Icons.person_outline,
              errorText: _nameError,
              onChanged: (_) {
                if (_nameError != null) setState(() => _nameError = null);
...
