...
        ingId: 103,
        name: 'Cherry Tomatoes',
        details: '~10 pcs • Pantry',
        category: 'Vegetables',
        status: PantryItemStatus.low,
        quantity: '10',
        unit: 'pcs',
      ),
      PantryIngredient(
        pIngredientId: 4,
        ingId: 104,
        name: 'Baby Spinach',
        details: '200g • Expired 2 days ago',
...
