...
        ),
        ShoppingListItem(
          id: 'maldon-sea-salt',
          itemId: 206,
          name: 'Maldon Sea Salt',
          quantity: '1 box',
          category: 'PANTRY',
        ),
        ShoppingListItem(
          id: 'extra-virgin-olive-oil',
          itemId: 207,
          name: 'Extra Virgin Olive Oil',
          quantity: '500ml',
...
