appId: com.mealchemy.mealchemy
name: Add Pantry Ingredient

---

# auth-login 
- launchApp:
    clearState: true

# Login screen is the app's initial location.
- assertVisible: "Welcome Back"

# Enter email of existing user
- tapOn:
    below: "Email Address"
- inputText: "e2eUser@mealchemy.com"

# Enter password of existing user
- tapOn:
    below: "Password"
- inputText: "test1234"

- tapOn:
    text: "Log In"
    below: "Password"

- assertVisible: "My Vault"
- assertNotVisible: "Welcome Back"

# Navigate to Pantry
- tapOn: "PANTRY"
- assertVisible: "Pantry"
- waitForAnimationToEnd

# Open the add item pop up
- tapOn: "Add Pantry Ingredient"
- assertVisible: "Pantry Entry"
- waitForAnimationToEnd

# search catalogue and select suggestion
- tapOn: 
    below: "Ingredient Name"
- inputText: "parmesan"
- waitForAnimationToEnd
- tapOn: ".*Cheese, parmesan, grated.*"
- hideKeyboard
- waitForAnimationToEnd

# Unit required - select from dropdown
- tapOn: ".*e.g. oz.*"
- waitForAnimationToEnd
- tapOn: "pcs"
- waitForAnimationToEnd

# Save and confirm it is in list
- tapOn: "Save Ingredient"
- extendedWaitUntil:
    visible: ".*Cheese, parmesan, grated.*"
    timeout: 10000


