appId: com.mealchemy.mealchemy
name: Pantry management

---

# auth-login 
- launchApp:
    clearState: true

# Login screen is the app's initial location.
- assertVisible: "Welcome Back"

# Enter email of existing user
- tapOn:
    below: "Email Address"
- inputText: "e2eUser@mealchemy.com"

# Enter password of existing user
- tapOn:
    below: "Password"
- inputText: "test1234"

- tapOn:
    text: "Log In"
    below: "Password"

- assertVisible: "My Vault"
- assertNotVisible: "Welcome Back"

# Navigate to Pantry
- tapOn: "PANTRY"
- assertVisible: "Pantry"
- waitForAnimationToEnd

# Open the add item pop up
- tapOn: "Add Pantry Ingredient"
- assertVisible: "Pantry Entry"
- waitForAnimationToEnd

# search catalogue and select suggestion
- tapOn: 
    below: "Ingredient Name"
- inputText: "parmesan"
- waitForAnimationToEnd
- tapOn: ".*Cheese, parmesan, grated.*"
- hideKeyboard
- waitForAnimationToEnd

# Unit required - select from dropdown
- tapOn: ".*e.g. oz.*"
- waitForAnimationToEnd
- tapOn: "pcs"
- waitForAnimationToEnd

# Save and confirm it is in list
- tapOn: "Save Ingredient"
- extendedWaitUntil:
    visible: ".*Cheese, parmesan, grated.*"
    timeout: 10000


# Edit - tap pencil icon
- tapOn: 
    text: "Edit Ingredient"
    below: ".*Cheese, parmesan, grated.*"
- assertVisible: "Edit Ingredient"
- waitForAnimationToEnd

# Update quantity
- tapOn: ".*Quantity.*"
- eraseText: 10
- inputText: "3"
- hideKeyboard
- waitForAnimationToEnd

# Change unit from dropdown
- tapOn: ".*Unit.*"
- waitForAnimationToEnd
- tapOn: "g"
- waitForAnimationToEnd

# Save
- tapOn: "Save"
- waitForAnimationToEnd

# Check values changed
- assertVisible: ".*3g.*"


# Confirm item exists
- assertVisible: ".*Cheese, parmesan, grated.*"

# Tap on specific item
- tapOn: 
    text: "Delete Ingredient"
    below: ".*Cheese, parmesan, grated.*"
- waitForAnimationToEnd

# Confirm ingredient deleted
- assertNotVisible: ".*Cheese, parmesan, grated.*"
- assertVisible: "No pantry ingredients found."